--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^3.0.1
   easy_localization: ^3.0.1
   get: ^4.6.5
+  audio_video_progress_bar: ^0.11.0
 
   cupertino_icons: ^1.0.2
 
