--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 .dart_tool/
 .packages
 build/
+.pub-cache/
+.pub/
+.packages
+.flutter-plugins
+
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
